--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 ---
 layout: default
-title: The Sheep Vote
+title: GreenYouth Initiative
 ---
 <header>
 	<div class="container">
 		<div class="column">
 			<div>
-				<h1 class="editable">Give sheep the vote</h1>
-				<p class="editable">Sheep are the backbone of the economy yet they receive no compensation.</p>
+				<h1 class="editable">Youth will save the world.</h1>
+				<p class="editable">It is time for the youth to create actual impact, starting with their campuses.</p>
 				<div class="button">
 					<a href="#donate">Donate Now</a>
 				</div>
 			</div>
 		</div>
 		<div class="column">
-			<img src="{{ site.baseurl }}/images/sheep.jpg" alt="Sheep">
+			<img src="{{ site.baseurl }}/images/gy_hands.jpg" alt="GreenYouth Logo">
 		</div>
 	</div>
 </header>
 
 <div class="container">
-	<h2 class="editable" style="text-align: center;">Why sheep need the vote</h2>
+	<h2 class="editable" style="text-align: center;">How will we bring change?</h2>
 
 	<ul class="thirds">
 		<li>
+			<div class="image">{% include icons/site.html icon="conditions" %}</div>
+			<h3 class="editable">Community</h3>
+			<p class="editable">Students lie at the heart of GreenYouth and with a strong sense of community, we achieve collaboration.</p>
+		</li>
+		
+		<li>
 			<div class="image">{% include icons/site.html icon="population" %}</div>
-			<h3 class="editable">Population</h3>
-			<p class="editable">New Zealand has a human population of just 4.5M while there are 70M sheep. </p>
+			<h3 class="editable">Field Work</h3>
+			<p class="editable">GYI encompasses projects in clean energy transformation, urban farming and more, with an initial focus on campuses.</p>
 		</li>
 
 		<li>
 			<div class="image">{% include icons/site.html icon="economy" %}</div>
-			<h3 class="editable">Economy</h3>
-			<p class="editable">Sheep are the backbone of the economy yet they receive no compensation.</p>
+			<h3 class="editable">Development</h3>
+			<p class="editable">GreenYouth provides SDG trainings to student communities and train-the-trainer materials to community leaders.</p>
 		</li>
 
-		<li>
-			<div class="image">{% include icons/site.html icon="conditions" %}</div>
-			<h3 class="editable">Work Conditions</h3>
-			<p class="editable">Sheep are forced to eat grass every day of their life. How about some of variety?</p>
-		</li>
+		
 	</ul>
 </div>
 
@@ -51,7 +53,7 @@ title: The Sheep Vote
 		<div>
 			<h2 class="editable">Our Mission</h2>
 
-			<p class="editable">Leave no sheep behind. Our mission to give sheep the right to vote and have them represented in parliament. For too long sheep have been exploited for their warm wool and delicious meat. It's time to put our hooves down and baa for what's right. Give sheep the vote!</p>
+			<p class="editable">Leave no one behind. Our mission to give the leaders of tomorrow the tools they need to empower their student community, aiming to create real change in areas including but not limited with the scope of the United Nations' Sustainable Development Goals. Youth will change the world!</p>
 		</div>
 	</div>
 </div>
@@ -59,11 +61,11 @@ title: The Sheep Vote
 <div class="container">
 	<hr>
 	<blockquote>
-		<p class="quote editable">The ultimate measure of a sheep is not where he stands in moments of comfort and convenience, but where he stands at times of challenge and controversy.</p>
+		<p class="quote editable">Let us acknowledge and celebrate what youth can do to build a safer, more just world. Let us strengthen our efforts to include young people in policies, programmes and decision-making processes that benefit their futures and ours.</p>
 		<div class="attribute">
 			<p class="meta">
-				<span class="image"><img class="editable" src="{{ site.baseurl }}/images/wooly.jpg" alt="Wooly"></span>
-				<span class="author editable"><strong>Wooly McBaa</strong></span>
+				<span class="image"><img class="editable" src="{{ site.baseurl }}/images/bankimoon.jpg" alt="Ban Ki-moon"></span>
+				<span class="author editable"><strong>Ban Ki-moon</strong></span>
 			</p>
 		</div>
 	</blockquote>
@@ -72,7 +74,7 @@ title: The Sheep Vote
 <div class="darker">
 	<div class="container">
 		<h2 class="editable">Join us</h2>
-		<p class="editable" style="text-align: center;">Sign up to hear the latest news and progress in our fight for the sheep vote.</p>
+		<p class="editable" style="text-align: center;">Sign up to hear the latest news and progress in the forming of the GreenYouth Initiative.</p>
 		<form action="{{ site.newsletter_action }}" method="post">
 			<input type="text" name="EMAIL" placeholder="Email">
 			<input type="submit" value="Sign up"/>
