--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: GreenYouth Initiative
 			</div>
 		</div>
 		<div class="column">
-			<img src="{{ site.baseurl }}/images/gy_hands.jpg" alt="GreenYouth Logo">
+			<img src="{{ site.baseurl }}/images/gy_hands.png" alt="GreenYouth Logo">
 		</div>
 	</div>
 </header>
@@ -48,7 +48,7 @@ title: GreenYouth Initiative
 <div class="container">
 	<div class="columns">
 		<div>
-			<img src="{{ site.baseurl }}/images/sheep2.jpg" alt="Sheep">
+			<img src="{{ site.baseurl }}/images/gy_abbv.jpg" alt="GreenYouth Initiative">
 		</div>
 		<div>
 			<h2 class="editable">Our Mission</h2>
@@ -64,7 +64,7 @@ title: GreenYouth Initiative
 		<p class="quote editable">Let us acknowledge and celebrate what youth can do to build a safer, more just world. Let us strengthen our efforts to include young people in policies, programmes and decision-making processes that benefit their futures and ours.</p>
 		<div class="attribute">
 			<p class="meta">
-				<span class="image"><img class="editable" src="{{ site.baseurl }}/images/bankimoon.jpg" alt="Ban Ki-moon"></span>
+				<span class="image"><img class="editable" src="{{ site.baseurl }}/images/bankimoon.png" alt="Ban Ki-moon"></span>
 				<span class="author editable"><strong>Ban Ki-moon</strong></span>
 			</p>
 		</div>
