--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: GreenYouth Initiative
 			</div>
 		</div>
 		<div class="column">
-			<img src="{{ site.baseurl }}/images/gy_hands.png" alt="GreenYouth Logo">
+			<img src="{{ site.baseurl }}/images/gy_logo.png" alt="GreenYouth Logo">
 		</div>
 	</div>
 </header>
@@ -48,7 +48,7 @@ title: GreenYouth Initiative
 <div class="container">
 	<div class="columns">
 		<div>
-			<img src="{{ site.baseurl }}/images/gy_abbv.jpg" alt="GreenYouth Initiative">
+			<img src="{{ site.baseurl }}/images/gy_hands.png" alt="GreenYouth Initiative">
 		</div>
 		<div>
 			<h2 class="editable">Our Mission</h2>
